2018-09-24  Eric Herman <eric@freesa.org>

	update lib ehstr

	* src/ehstr.c: update from upstream
	* src/ehbigint-eba.h: account for eba diy memset by ehstr
	* misc/pre-tidy.patch: respin


2018-09-23  Eric Herman <eric@freesa.org>

	update the EBA libs

	* src/eba.h: update lib
	* src/eba.c: update lib
	* src/ehbigint-str.c: remove endian #ifdef
	* src/ehbigint.c: remove endian #ifdef
	* Makefile.am: update -DEBA_FOO
	* src/ehbigint-arduino.h: update #defines
	* configure.ac: bump version
	* misc/pre-tidy.patch: respin


2018-09-15  Eric Herman <eric@freesa.org>

	Previously, eba.c was not being build with the correct
	#defines from ehbigint-eba.h

	There was a bytes_used bug which took a while to track
	down and demonstrate with tests; now fixed.

	* src/ehbigint-str.c: ensure bytes_used is correct
	* src/ehbigint.c: ensure bytes_used is correct
	* src/ehbigint-eba.h: #define Eba_stack_alloc_str
	* Makefile.am: ebh.c is built with -include ehbigint-eba.h
	* tests/test-compare.c: found a bytes_used bug
	* tests/test-div.c: found a bytes_used bug
	* tests/test-subtract.c: found a bytes_used bug
	* tests/test-n-choose-k.c: add test we can do in our heads
	* misc/pre-tidy.patch: respin

2018-07-25  Eric Herman <eric@freesa.org>

	* src/ehbigint.c: replace trial div with prime witnesses
	* src/ehbigint.h: rename and tune default constants a bit

2017-07-03  Eric Herman <eric@freesa.org>

	Add ehbi_n_choose_k Binomial Coefficients function
	Also implment various functions such that a long may
	be passed in, rather than a bigint object.

	* src/ehbigint.h: ehbi_n_choose_k, & misc _l versions
	* src/ehbigint.c: ehbi_n_choose_k, & misc _l versions
	* src/ehbigint-log.h: #define NOOP to be ((void)(0))
	* tests/test-n-choose-k.c: two simple tests
	* Makefile.am: test-n-choose-k
	* .gitignore: test-n-choose-k
	* misc/pre-tidy.patch: respin

2017-06-28  Eric Herman <eric@freesa.org>

	convience function for construction/destruction

	* src/ehbigint-malloc.h: