@@ -1,3 +1,10 @@
+2018-09-25  Eric Herman <eric@freesa.org>
+
+	replace loop with memcpy and memset
+
+	* src/eba.c: no point in iterating if memcpy, memset work
+
+
 2018-09-24  Eric Herman <eric@freesa.org>
 
 	update lib ehstr
